Update URL for fetching word list in Main.java