@@ -17,7 +17,8 @@ public class Main {
       try{
           // :3
           //URL url = new URL("http://wiki.puzzlers.org/pub/wordlists/unixdict.txt");
-          URL url = new URL("https://raw.githubusercontent.com/pmichaud/rpbench/master/files/unixdict.txt");
+          URL url = java.net.URI.create("https://web.archive.org/web/20180820022359if_/http://wiki.puzzlers.org/pub/wordlists/unixdict.txt").toURL();
+          //URL url = new URL("https://web.archive.org/web/20180820022359if_/http://wiki.puzzlers.org/pub/wordlists/unixdict.txt");
           BufferedReader reader = new BufferedReader(new InputStreamReader(url.openStream()));
 
           Map<String, List<String>> anagramy = reader.lines().collect(Collectors.groupingBy(slowo -> {
@@ -42,5 +43,6 @@ public class Main {
       }
   }
 }
+
 
 
